crates/etl-api/src/k8s/snapshots/etl_api__k8s__http__tests__create_bq_container_environment.snap
---
source: crates/etl-api/src/k8s/http.rs
expression: container_environment
---
[
  {
    "name": "APP_ENVIRONMENT",
    "value": "dev"
  },
  {
    "name": "APP_VERSION",
    "value": "ramsup/etl-replicator:2a41356af735f891de37d71c0e1a62864fe4630e"
  },
  {
    "name": "RUST_LOG",
    "value": "info"
  },
  {
    "name": "RUST_BACKTRACE",
    "value": "1"
  },
  {
    "name": "APP_PIPELINE__PG_CONNECTION__PASSWORD",
    "valueFrom": {
      "secretKeyRef": {
        "key": "password",
        "name": "abcdefghijklmnopqrst-42-postgres-password"
      }
    }
  },
  {
    "name": "APP_DESTINATION__BIG_QUERY__SERVICE_ACCOUNT_KEY",
    "valueFrom": {
      "secretKeyRef": {
        "key": "service-account-key",
        "name": "abcdefghijklmnopqrst-42-bq-service-account-key"
      }
    }
  }
]
