crates/etl-api/src/k8s/snapshots/etl_api__k8s__http__tests__create_ducklake_container_environment.snap
---
source: crates/etl-api/src/k8s/http.rs
expression: container_environment
---
[
  {
    "name": "APP_ENVIRONMENT",
    "value": "dev"
  },
  {
    "name": "APP_VERSION",
    "value": "ramsup/etl-replicator:2a41356af735f891de37d71c0e1a62864fe4630e"
  },
  {
    "name": "RUST_LOG",
    "value": "info"
  },
  {
    "name": "RUST_BACKTRACE",
    "value": "1"
  },
  {
    "name": "APP_PIPELINE__PG_CONNECTION__PASSWORD",
    "valueFrom": {
      "secretKeyRef": {
        "key": "password",
        "name": "abcdefghijklmnopqrst-42-postgres-password"
      }
    }
  },
  {
    "name": "APP_DESTINATION__DUCKLAKE__CATALOG_URL",
    "valueFrom": {
      "secretKeyRef": {
        "key": "catalog-url",
        "name": "abcdefghijklmnopqrst-42-ducklake"
      }
    }
  },
  {
    "name": "APP_DESTINATION__DUCKLAKE__S3_ACCESS_KEY_ID",
    "valueFrom": {
      "secretKeyRef": {
        "key": "s3-access-key-id",
        "name": "abcdefghijklmnopqrst-42-ducklake"
      }
    }
  },
  {
    "name": "APP_DESTINATION__DUCKLAKE__S3_SECRET_ACCESS_KEY",
    "valueFrom": {
      "secretKeyRef": {
        "key": "s3-secret-access-key",
        "name": "abcdefghijklmnopqrst-42-ducklake"
      }
    }
  }
]
