crates/etl-api/src/k8s/snapshots/etl_api__k8s__http__tests__create_ducklake_maintenance_json.snap
---
source: crates/etl-api/src/k8s/http.rs
expression: "serde_json::to_string_pretty(&ducklake_maintenance_json).unwrap()"
---
{
  "apiVersion": "etl.supabase.com/v1alpha1",
  "kind": "DuckLakeMaintenance",
  "metadata": {
    "labels": {
      "etl.supabase.com/app-name": "abcdefghijklmnopqrst-42-replicator-app",
      "etl.supabase.com/app-type": "etl-ducklake-maintenance-app",
      "etl.supabase.com/pipeline-id": "24",
      "etl.supabase.com/replicator-id": "42",
      "etl.supabase.com/tenant-id": "abcdefghijklmnopqrst"
    },
    "name": "abcdefghijklmnopqrst-42",
    "namespace": "etl-data-plane"
  },
  "spec": {
    "jobTemplate": {
      "activeDeadlineSeconds": 1800,
      "backoffLimit": 1,
      "cpuRequestMillicores": 1000,
      "image": "supabase/replicator:1.2.3",
      "memoryRequestMiB": 1024,
      "ttlSecondsAfterFinished": 86400
    },
    "operations": {
      "cleanupOldFiles": {
        "enabled": true
      },
      "expireSnapshots": {
        "enabled": true
      },
      "inlineFlush": {
        "enabled": true,
        "minInlinedBytes": 10000000
      },
      "mergeAdjacentFiles": {
        "enabled": true,
        "maxCompactedFiles": 40,
        "maxTablesPerRun": 8,
        "targetFileSize": "500MB"
      },
      "rewriteDataFiles": {
        "deleteThreshold": 0.5,
        "enabled": true,
        "maxTablesPerRun": 8
      }
    },
    "pause": {
      "maxDurationSeconds": 2700
    },
    "pipelineRef": {
      "pipelineId": 24,
      "replicatorId": 42,
      "tenantId": "abcdefghijklmnopqrst"
    },
    "runtimeRefs": {
      "configMapName": "abcdefghijklmnopqrst-42-replicator-config",
      "ducklakeSecretName": "abcdefghijklmnopqrst-42-ducklake",
      "postgresSecretName": "abcdefghijklmnopqrst-42-postgres-password"
    },
    "schedule": {
      "minIntervalSeconds": 3600
    }
  }
}
